// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select> Simple render 1`] = `
<select
  className="select form-control"
  disabled={false}
/>
`;

exports[`<Select> large 1`] = `
<select
  className="select form-control form-control-lg"
  disabled={false}
/>
`;

exports[`<Select> small 1`] = `
<select
  className="select form-control form-control-sm"
  disabled={false}
/>
`;

exports[`<Select> with className 1`] = `
<select
  className="some-class select form-control"
  disabled={false}
/>
`;

exports[`<Select> with id 1`] = `
<select
  className="select form-control"
  disabled={false}
  id="some-id"
/>
`;

exports[`<Select> with items - first without a value 1`] = `
<select
  className="select form-control"
  disabled={false}
>
  <option
    disabled={true}
  >
    First
  </option>
  <option
    value="last"
  >
    Last
  </option>
</select>
`;

exports[`<Select> with items 1`] = `
<select
  className="select form-control"
  disabled={false}
>
  <option
    value="first"
  >
    First
  </option>
  <option
    value="last"
  >
    Last
  </option>
</select>
`;

exports[`<Select> with items and all disabled 1`] = `
<select
  className="select form-control"
  disabled={true}
>
  <option
    value="first"
  >
    First
  </option>
  <option
    value="last"
  >
    Last
  </option>
</select>
`;

exports[`<Select> with items and first explicetly disabled 1`] = `
<select
  className="select form-control"
  disabled={true}
>
  <option
    disabled={true}
    value="first"
  >
    First
  </option>
  <option
    value="last"
  >
    Last
  </option>
</select>
`;
